--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Electro-Cart</string>
+    <string name="app_name">Electro-Mart</string>
     <string name="hint_email">Email</string>
     <string name="hint_password">Password</string>
     <string name="text_forgot_password">Forgot Password ?</string>
